# godot-inference.cpp

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md
doc_classes/: GameDB.xml  ImagePack.xml
docs/: TODO.md  benchmark.md  cheatsheet.md  developer.md  models.md
libs/: CMakeLists.txt
libs/core/: CMakeLists.txt  chat_message.cpp  chat_message.hpp  utils.cpp  utils.hpp
libs/miniaudio/: CMakeLists.txt
libs/tests/: CMakeLists.txt  main.cpp
project/: .gitignore  benchmark.gd  benchmark.gd.uid  benchmark.tscn  default_bus_layout.tres  example.gd  example.tscn  export_presets.cfg  inference_backend.gd  llm_backend.gd  llm_backend.gd.uid  main.gd  main.tscn  project.godot  text_edit.gd  text_edit.gd.uid  text_to_speech.gd  text_to_speech.gd.uid  text_to_speech.tscn  utils.gd  utils.gd.uid  voice_line.gd  voice_line.gd.uid  voice_line.tscn
src/: CMakeLists.txt  asr_model.cpp  asr_model.hpp  benchmark.cpp  benchmark.hpp  constants.hpp  game_db.cpp  game_db.hpp  globals.cpp  globals.hpp  image_pack.cpp  image_pack.hpp  inference_engine.cpp  inference_engine.hpp  llm.cpp  llm_chat.cpp  llm_chat.hpp  llm_chat_message.cpp  llm_chat_message.hpp  llm_chat_parameters.cpp  llm_chat_parameters.hpp  llm_engine.cpp  llm_engine.hpp  llm_model.cpp  llm_model.hpp  register_types.cpp  threading.cpp  threading.hpp  utils.cpp  utils.hpp
vcpkg/ports/ggml/: portfile.cmake
vcpkg/triplets/: x64-windows-ggml-61.cmake
